# OutThereTool

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  canonical_data.sqlite  data.sqlite  example.exr  example.exr.import  export_presets.cfg  icon.png.import  icon_big.png.import  lib  make_release.sh  project.godot  screenshot.png.import  spectral_lines.json  temporar.gd  temporar.gd.uid  temporar.tscn  test_filter_ranges.gd  test_filter_ranges.gd.uid  tick3.png.import
Resources/: zscale.gdshader  zscale.gdshader.uid
Scenes/: aligned_displayer.gd  aligned_displayer.gd.uid  aligned_displayer.tscn  cache_progress.gd  cache_progress.gd.uid  cache_progress.tscn  comments.gd  comments.gd.uid  comments_viewer.gd  comments_viewer.gd.uid  comments_viewer.tscn  fits_image.gd  fits_image.gd.uid  fits_image.tscn  galaxy_display.gd  galaxy_display.gd.uid  galaxy_display.tscn  help.tscn  main.gd  main.gd.uid  main.tscn  main2.tscn  new_main.tscn  object_viewing.gd  object_viewing.gd.uid  object_viewing.tscn  ot_image.gd  ot_image.gd.uid  ot_image.tscn  out_there.gd  out_there.gd.uid  out_there.tscn  ovleray.gd  ovleray.gd.uid  plot_display.gd  plot_display.gd.uid  plot_display.tscn  plot_test.gd  plot_test.gd.uid  plot_test.tscn  (+8 more)
Scripts/: CachedResourceLoader.gd  CachedResourceLoader.gd.uid  GlobalResourceCache.gd  GlobalResourceCache.gd.uid  NetworkConfig.gd  helpers.gd  (+33 more)
backend/: Dockerfile  auth.py  database.py  default.conf  docker-compose.yml  gal_data.csv  gal_data.csv.import  generate_token.py  import_data.py  main.py  models.py  pyproject.toml  schema.sql  schemas.py
(+334 files in other folders)
